mule-user-guide/v/3.4/anypoint-connectors.adoc
=  Anypoint连接器

== 概述

=== 什么是Anypoint连接器？

*Anypoint Connectors*方便您将Mule应用程序与第三方API进行集成。在应用程序的流程中使用它们通过特定的API发送和接收数据。

选定的Anypoint连接器会自动与Mule Studio捆绑在一起，但有大量的其他连接器可供下载。您可以浏览连接器站点上的完整库。

=== 我何时需要连接器与端点？

连接器的功能类似于通过传输方式发送和接收数据的端点。但是，虽然端点对于广泛使用的协议（如JDBC，FTP，HTTP，POP3等）是通用的，但每个连接器都是为了优化与特定第三方API（如Salesforce或Twitter）的连接而构建的。

在大多数情况下，端点将连接到具有标准格式或协议的东西，以满足您的需求。例如，如果要连接到Oracle数据库或MS SQL数据库，则可以使用 link:/mule-user-guide/v/3.4/database-jdbc-endpoint-reference[JDBC端点]，因为这些数据库以标准格式输出其数据。不需要Oracle或MS SQL连接器。同样，你不需要一个特定类型文件的连接器，如.csv文件。可以将 link:/mule-user-guide/v/3.4/file-endpoint-reference[文件终结点]配置为将数据输入和输出为任何类型的文本文件格式，包括.csv，因此不需要csv连接器。

=== 如果我需要未在扩展站点上列出的连接器，该怎么办？

如果连接器站点上的连接器都不符合您的需求，并且您的用例未包含在 link:/mule-user-guide/v/3.4/studio-endpoints[端点]中，那么您有以下几种选择：

* 通过 link:http://forums.mulesoft.com[论坛]联系MuleSoft和社区 -  MuleSoft或社区成员可能正在构建您需要的连接器，或者可以将您指向其他地方托管的社区构建的连接器。
* 考虑构建自己的。查看 link:/anypoint-connector-devkit/v/3.4[Anypoint连接器DevKit]文档以获取更多信息。

== 连接器支持类别

连接器属于以下类别之一。有关更多信息，请参阅 link:https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[连接器支持政策]。

[%header,cols="2*a"]
|===
| {键入{1}}说明
| *Community*
|

MuleSoft或MuleSoft社区的成员编写和维护https://anypoint.mulesoft.com/exchange/?search=community[Community连接器]。由社区或MuleSoft构建的连接器通常是开源的，尽管每个软件包可能有所不同。合作伙伴构建的连接器可能不是开源的。直接联系合作伙伴以获取更多信息。您不需要任何特殊帐户或许可证即可使用社区连接器。

| *MuleSoft Certified*
|

https://anypoint.mulesoft.com/exchange/?search=mulesoft-certified[MuleSoft认证连接器]由MuleSoft的合作伙伴和开发人员社区开发，并由MuleSoft进行审查和认证。为获得支持，客户应联系创建MuleSoft认证连接器的MuleSoft合作伙伴。

| *Select*
|

MuleSoft维护着https://anypoint.mulesoft.com/exchange/?search=select[Select connectors]。包含在开源Mule发行版中的连接器可供所有人使用，但支持仅包含在Anypoint Platform订阅中。要使用所有其他选择连接器和访问支持，您必须具有活动的Anypoint Platform订阅。

| *Premium*
|

MuleSoft维护着https://anypoint.mulesoft.com/exchange/?search=premium[Premium连接器];您必须拥有有效的CloudHub Premium计划或企业订购，并具有您希望使用的特定连接器的权利。
|===

== 访问连接器

Mule Studio在标准下载中包含许多捆绑连接器。有关这些连接器的更多信息，请参阅下表。

MuleSoft和Mule社区的成员已经开发了数十个连接器，您可以在您的应用程序中使用它们。请参阅 link:/mule-user-guide/v/3.4/installing-connectors[安装连接器]文档以了解如何在Mule Studio中下载和安装连接器。

下表总结了与Mule Studio下载捆绑在一起的Anypoint连接器。

[%header,cols="4*"]
|===
| Web服务API  |说明
| CMIS  |使用此连接器，您的Mule应用程序可以与实现内容管理互操作性服务（CMIS）规范的任何CMS系统进行交互。
| Facebook  |使用此连接器，您的Mule应用程序可以与使用OAuth2进行认证的Facebook对话框API提供的所有功能进行交互。 |
| Google电子表格{1}}使用此连接器，您的Mule应用程序可以访问，创建和修改Google文档电子表格。此连接器使用OAuth2进行身份验证。
| Magento  |使用此连接器，您的Mule应用程序可与Magento进行交互，Magento是一种基于开源技术的功能丰富的电子商务平台，可为在线商户提供对外观，内容和功能他们的电子商务商店。
| Salesforce  |使用此连接器，您的Mule应用程序可以与Salesforce API连接，通过SOAP API使用常规用户名和密码查询，创建和更新信息，或者使用OAuth作为身份验证机制。
| Twitter  |使用此连接器，您的Mule应用程序可以与Twitter REST API进行交互，该API为大多数Twitter功能提供了简单的界面。
|===

如果您正在使用Mule Studio以外的XML编辑器开发应用程序，则可以将Anypoint连接器安装为Maven依赖项。要使连接器可用于Mavenized Mule应用程序，请将连接器存储库添加到您的`pom.xml`文件，将该模块作为依赖项添加并将其添加到应用程序的打包过程中。

可以从连接器站点访问连接器特定的参考页面上的每个连接器的最新安装链接和说明。

=== 安装连接器

MuleSoft和Mule社区的成员已经开发了许多额外的连接器，您可以在您的应用程序中使用它们。请参阅 link:/mule-user-guide/v/3.4/installing-connectors[安装连接器]文档以了解如何在Mule Studio和Maven中下载和安装连接器。

== 配置连接器

有关特定于各个连接器的配置信息，请参阅连接器站点上提供的各个连接器的特定参考。每个连接器页面都链接到连接器文档，视频示例和完整的示例代码。

== 连接器兼容性

从Mule 3.2开始（包括），MuleSoft已经使所有连接器与所有新版本的Mule向前兼容。这组连接器被称为**3.2-compatible**或**Studio-compatible**，可以通过Mule Studio可视化界面中的属性窗格或通过XML编辑器进行配置。

在Mule ESB 3.2之前开发的连接器只能使用开发它们的Mule版本进行部署。换句话说，这些传统连接器既不是向前兼容的，也不是向后兼容的。

传统的连接器不能配置或Mule Studio，它与Mule 3.2推出。相反，您必须使用XML编辑器配置所有传统连接器，然后专门使用它们列为兼容的Mule版本进行部署。

== 连接器支持

有关更多信息，请参阅https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Connector支持策略]。

== 另请参阅

*  https://forums.mulesoft.com [MuleSoft论坛]
*  https://support.mulesoft.com [联系MuleSoft支持]
*  https://www.anypoint.mulesoft.com/exchange/?type=connector [Anypoint Exchange]
* 了解如何使用 link:/anypoint-connector-devkit/v/3.4[Anypoint连接器DevKit]构建自己的连接器。
